; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_19889.c_Pad_Name.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_19889.c_Pad_Name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Pad_Name(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @strlen(i8* %10)
  store i32 %11, i32* %9, align 4
  store i32 0, i32* %8, align 4
  br label %12

12:                                               ; preds = %50, %2
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 16
  br i1 %14, label %15, label %53

15:                                               ; preds = %12
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp sge i32 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  store i8 67, i8* %6, align 1
  store i8 65, i8* %7, align 1
  br label %36

20:                                               ; preds = %15
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* %8, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %21, i64 %23
  %25 = load i8, i8* %24, align 1
  store i8 %25, i8* %5, align 1
  %26 = load i8, i8* %5, align 1
  %27 = sext i8 %26 to i32
  %28 = sdiv i32 %27, 16
  %29 = add nsw i32 %28, 65
  %30 = trunc i32 %29 to i8
  store i8 %30, i8* %6, align 1
  %31 = load i8, i8* %5, align 1
  %32 = sext i8 %31 to i32
  %33 = srem i32 %32, 16
  %34 = add nsw i32 %33, 65
  %35 = trunc i32 %34 to i8
  store i8 %35, i8* %7, align 1
  br label %36

36:                                               ; preds = %20, %19
  %37 = load i8, i8* %6, align 1
  %38 = load i8*, i8** %4, align 8
  %39 = load i32, i32* %8, align 4
  %40 = mul nsw i32 %39, 2
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %38, i64 %41
  store i8 %37, i8* %42, align 1
  %43 = load i8, i8* %7, align 1
  %44 = load i8*, i8** %4, align 8
  %45 = load i32, i32* %8, align 4
  %46 = mul nsw i32 %45, 2
  %47 = add nsw i32 %46, 1
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8, i8* %44, i64 %48
  store i8 %43, i8* %49, align 1
  br label %50

50:                                               ; preds = %36
  %51 = load i32, i32* %8, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %8, align 4
  br label %12

53:                                               ; preds = %12
  %54 = load i8*, i8** %4, align 8
  %55 = getelementptr inbounds i8, i8* %54, i64 32
  store i8 0, i8* %55, align 1
  ret void
}

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
